--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "rest",
+  "name": "quora-post",
   "version": "1.0.0",
-  "description": "",
+  "description": "Quora-like post application using Express and EJS",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "ankit jaiswal",
+  "keywords": [
+    "express",
+    "ejs",
+    "nodejs",
+    "crud",
+    "quora-clone"
+  ],
+  "author": "Ankit Jaiswal",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "ejs": "^3.1.10",
     "method-override": "^3.0.0",
     "uuid": "^13.0.0"
   }
